; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_df-problems.c_df_ri_dump.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_df-problems.c_df_ri_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dataflow = type { i32 }

@DF_RI_LIFE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"Register info:\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dataflow*, i32*)* @df_ri_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @df_ri_dump(%struct.dataflow* %0, i32* %1) #0 {
  %3 = alloca %struct.dataflow*, align 8
  %4 = alloca i32*, align 8
  store %struct.dataflow* %0, %struct.dataflow** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 (...) @get_insns()
  %7 = call i32 @print_rtl_with_bb(i32* %5, i32 %6)
  %8 = load %struct.dataflow*, %struct.dataflow** %3, align 8
  %9 = getelementptr inbounds %struct.dataflow, %struct.dataflow* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @DF_RI_LIFE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @fprintf(i32* %15, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @dump_flow_info(i32* %17, i32 -1)
  br label %19

19:                                               ; preds = %14, %2
  ret void
}

declare dso_local i32 @print_rtl_with_bb(i32*, i32) #1

declare dso_local i32 @get_insns(...) #1

declare dso_local i32 @fprintf(i32*, i8*) #1

declare dso_local i32 @dump_flow_info(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
